--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto);
 }
 
 @layer utilities {
@@ -14,23 +14,25 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --font-roboto: "Roboto", sans-serif;
+    --primary: 214 32% 36%;
+    --primary-foreground: 217 44% 23%;
+    --secondary: 25 30% 78%;
+    --secondary-foreground: 25 9% 50%;
+    --accent: 38 97% 48%;
+    --background: 34 41% 93%;
+    --foreground: 217 44% 23%;
+    --muted: 213 25% 92%;
+    --muted-foreground: 213 25% 45%;
+    --border: 213 25% 88%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --chart-1: 12 76% 61%;
@@ -75,8 +77,53 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    @apply text-4xl font-bold tracking-tight;
+  }
+
+  h2 {
+    @apply text-2xl font-semibold tracking-tight;
+  }
+
+  h3 {
+    @apply text-xl font-semibold;
+  }
 }
 
+.btn-primary {
+  @apply px-4 py-2 bg-primary text-white rounded-lg font-medium 
+         hover:bg-primary-foreground hover:scale-105 transition-transform ease-in-out duration-200;
+}
+
+.btn-secondary {
+  @apply px-4 py-2 bg-secondary hover:bg-secondary-foreground text-white rounded-lg 
+         hover:scale-105 transition-transform ease-in-out duration-200 font-medium;
+}
+
+.input-field-temp {
+  @apply w-full px-3 py-2 rounded-lg border border-border bg-white
+         focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary
+         placeholder:text-muted-foreground;
+}
+
+.select-field {
+  @apply w-full px-3 py-2 rounded-lg border border-border bg-white
+         focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary
+         appearance-none;
+}
+
+.form-label {
+  @apply block text-sm font-medium text-foreground mb-1;
+}
+
+.form-label-error {
+  @apply block text-sm font-medium text-destructive mb-1;
+}
+
+.message-error {
+  @apply text-sm font-light text-destructive;
+}
 
 /* Estilo general del scrollbar */
 ::-webkit-scrollbar {
